--- a/multi-cluster/manifests/nginx-deployment.yaml
+++ b/multi-cluster/manifests/nginx-deployment.yaml
@@ -2,11 +2,12 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
+  namespace: default
 spec:
   selector:
     matchLabels:
       app: nginx
-  replicas: 2 
+  replicas: 1 
   template:
     metadata:
       labels:
